# ai-dev-swarm

./: .gitignore  .mcp.json  AGENTS.md  README.md  USER-MANUAL.md  ideas-template.md  ideas.md  package-lock.json  user-manual_CN.md  webui.sh
.claude/: skills
.claude/commands/: backlog.md  dev.md  ideas-refine.md  review.md  sprint.md  stage.md  test.md
.gemini/: settings.json
.gemini/commands/: backlog.toml  dev.toml  ideas-refine.toml  review.toml  sprint.toml  stage.toml  test.toml
00-init-ideas/: README.md  cost-budget.md  owner-requirement.md  problem-statement.md  target-users.md  value-proposition.md
01-market-research/: SKIP.md
02-personas/: SKIP.md
03-mvp/: README.md  SKIP.md  mvp-scope.md  out-of-scope.md  success-metrics.md
04-prd/: README.md  functional-requirements.md  non-functional-requirements.md  out-of-scope.md  prd.md
05-ux/: README.md  SKIP.md  accessibility.md  edge-cases.md  interaction-specs.md  user-flows.md
06-architecture/: SKIP.md
07-tech-specs/: README.md
08-devops/: README.md
09-sprints/: README.md
10-deployment/: README.md
dev-swarm/: mcp_descriptions.yaml  mcp_settings.json
dev-swarm/dev-skills/: ci-cd.md  dev-swarm-mcp.md  development-cycle.md  git-merge.md  mcp-server.md  mcp-to-skills.md  mermaid.md  npm-publish.md  project-archive.md  project-init.md  python.md  screen_stream.md  use-computer.md  webui-design-plan.md
dev-swarm/docs/: agent-skill-specification.md  (+11 more)
dev-swarm/py_scripts/: README.md  dev-swarm-mcp.py  mcp-to-skills.py  mcp_to_skills.py  pyproject.toml  screen_stream.py  use_computer.py
(+273 files in other folders)
