[project]
name = "py-scripts"
version = "0.1.0"
description = "Python scripts for AI Dev Swarm including WebUI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "fastapi>=0.127.1",
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyqt6>=6.10.1",
    "python-dotenv>=1.0.0",
    "screeninfo>=0.8.1",
    "uvicorn[standard]>=0.40.0",
    "pyyaml>=6.0.0",
]

[tool.uv.workspace]
members = [
    "scripts/*",
]
